Fix layout issues. Add illustration for not found adverts.

--- a/components/About/About.module.sass
+++ b/components/About/About.module.sass
@@ -19,7 +19,7 @@
       font-size: 32px
       text-align: right
       letter-spacing: 4px
-      max-width: 520px
+      width: 50%
       line-height: 44px
       margin: 0
       margin-left: 0
@@ -46,5 +46,5 @@
     +min-md
       text-align: left
       font-size: 16px
-      max-width: 540px
+      width: 50%
       margin-top: 0
