--- a/components/Container/Container.module.sass
+++ b/components/Container/Container.module.sass
@@ -8,7 +8,7 @@
     margin: 100px auto
     max-width: calc(100vw - 32px)
   +min-md
-    margin: 120px auto
+    margin: 80px auto
     max-width: calc(100vw - 64px)
   +min-lg
     max-width: calc(100vw - 128px)
