--- a/components/Features/Features.module.sass
+++ b/components/Features/Features.module.sass
@@ -9,5 +9,6 @@
   +min-md
     flex-direction: row
     align-items: center
-    justify-content: space-around
-    gap: 0
+    justify-content: center
+    gap: 5rem
+    padding-bottom: 120px
