--- a/components/Footer/Footer.module.sass
+++ b/components/Footer/Footer.module.sass
@@ -1,12 +1,9 @@
 .footer
   align-items: center
   background-color: var(--purple50)
-  bottom: 0
   color: var(--grey20)
   display: flex
   justify-content: center
-  position: fixed
-
   height: 50px
   width: 100%
   left: 0
