--- a/components/Pagination/Pagination.module.sass
+++ b/components/Pagination/Pagination.module.sass
@@ -12,7 +12,7 @@
   margin: 0
   padding: 0
   li
-    padding: 4px 6px
+    padding: 4px
 .PaginationCurrentPage
   border-radius: 4px
   background-color: var(--purple40)
